// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmploymentStatusPage when claimantShowEmploymentStatus feature flag is disabled renders the page without the employment status field 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Employment information"
>
  <Alert
    neutral={true}
    state="info"
  >
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "p": <p />,
        }
      }
      i18nKey="pages.claimsEmploymentStatus.alertBody"
    />
  </Alert>
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "employer_fein",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={true}
  >
    <InputText
      hint="This number is 9 digits. You can find this number on all notices your employer sent about Paid Family and Medical Leave. You can also find it on your W‑2 or 1099‑MISC. Ask your employer if you need help getting this information."
      inputMode="numeric"
      label="What is your employer’s Employer Identification Number (EIN)?"
      mask="fein"
      name="employer_fein"
      onChange={[Function]}
      value=""
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`EmploymentStatusPage when claimantShowEmploymentStatus feature flag is disabled renders the page without the employment status field 2`] = `
Array [
  <p
    key="0"
  >
    If you’re self-employed or unemployed, apply by calling the Department of Family and Medical Leave Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
    .
  </p>,
  <p
    key="1"
  >
    You can apply online if you’re currently employed in Massachusetts.
  </p>,
]
`;

exports[`EmploymentStatusPage when claimantShowEmploymentStatus feature flag is enabled renders the page with the employment status field 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Employment information"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "I’m employed in Massachusetts",
          "value": "Employed",
        },
        Object {
          "checked": false,
          "label": "I’m unemployed",
          "value": "Unemployed",
        },
        Object {
          "checked": false,
          "label": "I’m self-employed",
          "value": "Self-Employed",
        },
      ]
    }
    hint={
      <Details
        label="What if I’ve been furloughed?"
      >
        If your hours have been cut or significantly reduced but you have not been laid off, select "I’m employed in Massachusetts"
      </Details>
    }
    label="What is your employment status?"
    name="employment_status"
    onChange={[Function]}
    type="radio"
    value=""
  />
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "employer_fein",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={false}
  >
    <InputText
      hint="This number is 9 digits. You can find this number on all notices your employer sent about Paid Family and Medical Leave. You can also find it on your W‑2 or 1099‑MISC. Ask your employer if you need help getting this information."
      inputMode="numeric"
      label="What is your employer’s Employer Identification Number (EIN)?"
      mask="fein"
      name="employer_fein"
      onChange={[Function]}
      value=""
    />
  </ConditionalContent>
</QuestionPage>
`;
